@@ -1,3 +1,6 @@
+12/19/2009
+- bugfix on comment lines in config files
+
 12/17/2009
 - bugfix of parent/global variable update at included/merged subtemplates
 - encode final template filepath into filename of compiled and cached files
